--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
       "cors": "^2.8.5",
       "csv-parse": "^5.5.2",
       "express": "^4.18.2",
+      "mongodb": "^6.3.0",
+      "mongoose": "^8.0.3",
       "morgan": "^1.10.0",
       "pm2": "^5.3.0"
    },
